[package]
name = "spin-test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
glob = "0.3"
http-body-util = "0.1"
hyper = "1.0"
libtest-mimic = "0.8"
log = "0.4"
owo-colors = { version = "4", features = ["supports-colors"] }
spin-common = { git = "https://github.com/spinframework/spin", rev = "4447abb7d7571fc887217045aff0ba349a8de955" }
spin-componentize = { git = "https://github.com/spinframework/spin", rev = "4447abb7d7571fc887217045aff0ba349a8de955" }
spin-http = { git = "https://github.com/spinframework/spin", default-features = false, rev = "4447abb7d7571fc887217045aff0ba349a8de955" }
spin-manifest = { workspace = true }
temp-dir = "0.1.16"
tokio = "1.0"
toml = { workspace = true }
wac-graph = "0.7"
wasmtime = "33.0"
wasmtime-wasi = "33.0"
wit-component = { workspace = true }
wit-parser = { workspace = true }

[workspace]
members = [
    "crates/*",
    "examples/test-rs",
    "examples/apps/app-rs",
    "conformance-tests",
]

[workspace.dependencies]
anyhow = "1.0"
spin-expressions = { git = "https://github.com/spinframework/spin", rev = "4447abb7d7571fc887217045aff0ba349a8de955" }
spin-manifest = { git = "https://github.com/spinframework/spin", rev = "4447abb7d7571fc887217045aff0ba349a8de955" }
spin-factor-outbound-networking = { git = "https://github.com/spinframework/spin", rev = "4447abb7d7571fc887217045aff0ba349a8de955" }
spin-serde = { git = "https://github.com/spinframework/spin", rev = "4447abb7d7571fc887217045aff0ba349a8de955" }
toml = { version = "0.8", features = ["preserve_order"] }
wit-bindgen-rt = { version = "0.42", features = ["bitflags"] }
wit-component = "0.235"
wit-parser = "0.235"
