[package]
name = "router"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
spin-http-routes = { git = "https://github.com/spinframework/spin", rev = "4447abb7d7571fc887217045aff0ba349a8de955" }
spin-manifest = { workspace = true }
toml = { workspace = true }
wit-bindgen-rt = { workspace = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "fermyon:router"

[package.metadata.component.target.dependencies]
"wasi:http" = { path = "../../host-wit/deps/http" }
"wasi:random" = { path = "../../host-wit/deps/random" }
"wasi:cli" = { path = "../../host-wit/deps/cli" }
"wasi:io" = { path = "../../host-wit/deps/io" }
"wasi:clocks" = { path = "../../host-wit/deps/clocks" }
"wasi:filesystem" = { path = "../../host-wit/deps/filesystem" }
"wasi:sockets" = { path = "../../host-wit/deps/sockets" }
