[package]
name = "spin-test-virt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
futures = "0.3"
ipnet = "2.11"
spin-expressions = { workspace = true }
spin-manifest = { workspace = true }
spin-serde = { workspace = true }
spin-locked-app = { git = "https://github.com/spinframework/spin", rev = "9906b4e499e47bcc6ebff4e7fe70bb255a5f925d" }
spin-outbound-networking-config = { git = "https://github.com/spinframework/spin", rev = "9906b4e499e47bcc6ebff4e7fe70bb255a5f925d" }
toml = { workspace = true }
wit-bindgen-rt = { workspace = true }
rusqlite = { version = "0.36", features = ["bundled", "wasm32-wasi-vfs"] }


[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:spin-test-virt"

[package.metadata.component.target]
world = "env"
path = "../../host-wit/deps/spin-test-virt"

[package.metadata.component.target.dependencies]
"fermyon:spin-wasi-virt" = { path = "../../host-wit/deps/spin-wasi-virt" }
"fermyon:spin" = { path = "../../host-wit/deps/fermyon" }
"wasi:http" = { path = "../../host-wit/deps/http" }
"wasi:random" = { path = "../../host-wit/deps/random" }
"wasi:cli" = { path = "../../host-wit/deps/cli" }
"wasi:io" = { path = "../../host-wit/deps/io" }
"wasi:clocks" = { path = "../../host-wit/deps/clocks" }
"wasi:filesystem" = { path = "../../host-wit/deps/filesystem" }
"wasi:sockets" = { path = "../../host-wit/deps/sockets" }
